refactor(rag-service): metadata tools and minute document ingestion